--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+:root {
+    /* fonts */
+    --bodyfont: 'source sans pro', sans-serif, serif;
+    --headerfont: 'abril fatface';
+    --titlefont: 'roboto slab';
+    /* colors */
+    --mainbg: #eee;
+    --newsbg: white;
+    --news-shadow: #ddd;
+    --fronttext: #dd3232;
+    --navlink: #777;
+    --gentext: black;
+}
