--- a/style.css
+++ b/style.css
@@ -18,22 +18,27 @@ body {
     background: var(--mainbg);
 }
 
+/* article text */
 main > p {
     text-align: justify;
 }
 
+/* page container */
 .newspaper-container {
     width: 700px;
     background: var(--newsbg);
     border-radius: 2rem;
     box-shadow: 2px 2px var(--news-shadow);
     padding: 2rem;
+    margin: 0 auto;
 }
 
+/* site header */
 header {
     text-align: center;
 }
 
+/* navigation */
 nav {
     margin-left: 0;
     border-top: 1px solid black;
@@ -41,8 +46,24 @@ nav {
 
 }
 
+/* navigation link styling */
 nav li {
     list-style: none;
     display: inline-block;
     padding: 0.2rem;
+}
+
+/* more articles */
+.more-articles {
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    border-top: 1px solid black;
+}
+
+.more-articles > section {
+    width: 20rem;
+    display: inline-block;
+    margin: 0rem 0.8rem;
+    text-align: justify;
 }
